Fixed style of color inputs on small devices

--- a/css/helpers/components/ColorInput.scss
+++ b/css/helpers/components/ColorInput.scss
@@ -2,6 +2,7 @@
 	display: flex;
 
 	.Form-input {
+		flex-grow: 1;
 		font-family: monospace;
 	}
 
@@ -13,9 +14,10 @@
 }
 
 .ColorInput-sample {
+	flex-shrink: 0;
 	border: 1px solid $color-black;
 	border-left: 0;
-	width: vr(2);
+	width: vr(1);
 }
 
 .ColorInput-pickButton {
